--- a/artifacts/docker-compose.yaml
+++ b/artifacts/docker-compose.yaml
@@ -536,7 +536,7 @@ services:
       - CORE_PEER_ID=peer14.org1.example.com
       - CORE_PEER_LOCALMSPID=Org1MSP
       - CORE_PEER_ADDRESS=peer14.org1.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.example.com:7051      
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer15.org1.example.com:7051      
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer14.org1.example.com:7051
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
       - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb14-1:5984
@@ -550,6 +550,150 @@ services:
     depends_on:
       - orderer.example.com
       - couchdb14-1
+
+  peer15.org1.example.com:
+    container_name: peer15.org1.example.com
+    extends:
+      file:   base.yaml
+      service: peer
+    environment:
+      - CORE_PEER_ID=peer15.org1.example.com
+      - CORE_PEER_LOCALMSPID=Org1MSP
+      - CORE_PEER_ADDRESS=peer15.org1.example.com:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer16.org1.example.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer15.org1.example.com:7051
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb15-1:5984
+    ports:
+      - 7126:7051
+      - 7127:7053
+    volumes:
+        - /var/run/:/host/var/run/
+        - ./channel/crypto-config/peerOrganizations/org1.example.com/peers/peer15.org1.example.com/msp:/etc/hyperledger/fabric/msp
+        - ./channel/crypto-config/peerOrganizations/org1.example.com/peers/peer15.org1.example.com/tls:/etc/hyperledger/fabric/tls
+    depends_on:
+      - orderer.example.com
+      - couchdb15-1
+
+  peer16.org1.example.com:
+    container_name: peer16.org1.example.com
+    extends:
+      file:   base.yaml
+      service: peer
+    environment:
+      - CORE_PEER_ID=peer16.org1.example.com
+      - CORE_PEER_LOCALMSPID=Org1MSP
+      - CORE_PEER_ADDRESS=peer16.org1.example.com:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer17.org1.example.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer16.org1.example.com:7051
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb16-1:5984
+    ports:
+      - 7131:7051
+      - 7132:7053
+    volumes:
+        - /var/run/:/host/var/run/
+        - ./channel/crypto-config/peerOrganizations/org1.example.com/peers/peer16.org1.example.com/msp:/etc/hyperledger/fabric/msp
+        - ./channel/crypto-config/peerOrganizations/org1.example.com/peers/peer16.org1.example.com/tls:/etc/hyperledger/fabric/tls
+    depends_on:
+      - orderer.example.com
+      - couchdb16-1
+
+  peer17.org1.example.com:
+    container_name: peer17.org1.example.com
+    extends:
+      file:   base.yaml
+      service: peer
+    environment:
+      - CORE_PEER_ID=peer17.org1.example.com
+      - CORE_PEER_LOCALMSPID=Org1MSP
+      - CORE_PEER_ADDRESS=peer17.org1.example.com:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer18.org1.example.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer17.org1.example.com:7051
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb17-1:5984
+    ports:
+      - 7136:7051
+      - 7137:7053
+    volumes:
+        - /var/run/:/host/var/run/
+        - ./channel/crypto-config/peerOrganizations/org1.example.com/peers/peer17.org1.example.com/msp:/etc/hyperledger/fabric/msp
+        - ./channel/crypto-config/peerOrganizations/org1.example.com/peers/peer17.org1.example.com/tls:/etc/hyperledger/fabric/tls
+    depends_on:
+      - orderer.example.com
+      - couchdb17-1
+
+  peer18.org1.example.com:
+    container_name: peer18.org1.example.com
+    extends:
+      file:   base.yaml
+      service: peer
+    environment:
+      - CORE_PEER_ID=peer18.org1.example.com
+      - CORE_PEER_LOCALMSPID=Org1MSP
+      - CORE_PEER_ADDRESS=peer18.org1.example.com:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer19.org1.example.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer18.org1.example.com:7051
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb18-1:5984
+    ports:
+      - 7141:7051
+      - 7142:7053
+    volumes:
+        - /var/run/:/host/var/run/
+        - ./channel/crypto-config/peerOrganizations/org1.example.com/peers/peer18.org1.example.com/msp:/etc/hyperledger/fabric/msp
+        - ./channel/crypto-config/peerOrganizations/org1.example.com/peers/peer18.org1.example.com/tls:/etc/hyperledger/fabric/tls
+    depends_on:
+      - orderer.example.com
+      - couchdb18-1
+
+  peer19.org1.example.com:
+    container_name: peer19.org1.example.com
+    extends:
+      file:   base.yaml
+      service: peer
+    environment:
+      - CORE_PEER_ID=peer19.org1.example.com
+      - CORE_PEER_LOCALMSPID=Org1MSP
+      - CORE_PEER_ADDRESS=peer19.org1.example.com:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer20.org1.example.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer19.org1.example.com:7051
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb19-1:5984
+    ports:
+      - 7146:7051
+      - 7147:7053
+    volumes:
+        - /var/run/:/host/var/run/
+        - ./channel/crypto-config/peerOrganizations/org1.example.com/peers/peer19.org1.example.com/msp:/etc/hyperledger/fabric/msp
+        - ./channel/crypto-config/peerOrganizations/org1.example.com/peers/peer19.org1.example.com/tls:/etc/hyperledger/fabric/tls
+    depends_on:
+      - orderer.example.com
+      - couchdb19-1
+
+  peer20.org1.example.com:
+    container_name: peer20.org1.example.com
+    extends:
+      file:   base.yaml
+      service: peer
+    environment:
+      - CORE_PEER_ID=peer20.org1.example.com
+      - CORE_PEER_LOCALMSPID=Org1MSP
+      - CORE_PEER_ADDRESS=peer20.org1.example.com:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.example.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer20.org1.example.com:7051
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb20-1:5984
+    ports:
+      - 7151:7051
+      - 7152:7053
+    volumes:
+        - /var/run/:/host/var/run/
+        - ./channel/crypto-config/peerOrganizations/org1.example.com/peers/peer20.org1.example.com/msp:/etc/hyperledger/fabric/msp
+        - ./channel/crypto-config/peerOrganizations/org1.example.com/peers/peer20.org1.example.com/tls:/etc/hyperledger/fabric/tls
+    depends_on:
+      - orderer.example.com
+      - couchdb20-1
 
   peer0.org2.example.com:
     container_name: peer0.org2.example.com
@@ -896,7 +1040,7 @@ services:
       - CORE_PEER_ID=peer14.org2.example.com
       - CORE_PEER_LOCALMSPID=Org2MSP
       - CORE_PEER_ADDRESS=peer14.org2.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org2.example.com:7051      
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer15.org2.example.com:7051      
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer14.org2.example.com:7051
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
       - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb14-2:5984
@@ -910,6 +1054,150 @@ services:
     depends_on:
       - orderer.example.com
       - couchdb14-2
+
+  peer15.org2.example.com:
+    container_name: peer15.org2.example.com
+    extends:
+      file:   base.yaml
+      service: peer
+    environment:
+      - CORE_PEER_ID=peer15.org2.example.com
+      - CORE_PEER_LOCALMSPID=Org2MSP
+      - CORE_PEER_ADDRESS=peer15.org2.example.com:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer16.org2.example.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer15.org2.example.com:7051
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb15-2:5984
+    ports:
+      - 8126:7051
+      - 8127:7053
+    volumes:
+        - /var/run/:/host/var/run/
+        - ./channel/crypto-config/peerOrganizations/org2.example.com/peers/peer15.org2.example.com/msp:/etc/hyperledger/fabric/msp
+        - ./channel/crypto-config/peerOrganizations/org2.example.com/peers/peer15.org2.example.com/tls:/etc/hyperledger/fabric/tls
+    depends_on:
+      - orderer.example.com
+      - couchdb15-2
+
+  peer16.org2.example.com:
+    container_name: peer16.org2.example.com
+    extends:
+      file:   base.yaml
+      service: peer
+    environment:
+      - CORE_PEER_ID=peer16.org2.example.com
+      - CORE_PEER_LOCALMSPID=Org2MSP
+      - CORE_PEER_ADDRESS=peer16.org2.example.com:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer17.org2.example.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer16.org2.example.com:7051
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb16-2:5984
+    ports:
+      - 8131:7051
+      - 8132:7053
+    volumes:
+        - /var/run/:/host/var/run/
+        - ./channel/crypto-config/peerOrganizations/org2.example.com/peers/peer16.org2.example.com/msp:/etc/hyperledger/fabric/msp
+        - ./channel/crypto-config/peerOrganizations/org2.example.com/peers/peer16.org2.example.com/tls:/etc/hyperledger/fabric/tls
+    depends_on:
+      - orderer.example.com
+      - couchdb16-2
+
+  peer17.org2.example.com:
+    container_name: peer17.org2.example.com
+    extends:
+      file:   base.yaml
+      service: peer
+    environment:
+      - CORE_PEER_ID=peer17.org2.example.com
+      - CORE_PEER_LOCALMSPID=Org2MSP
+      - CORE_PEER_ADDRESS=peer17.org2.example.com:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer18.org2.example.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer17.org2.example.com:7051
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb17-2:5984
+    ports:
+      - 8136:7051
+      - 8137:7053
+    volumes:
+        - /var/run/:/host/var/run/
+        - ./channel/crypto-config/peerOrganizations/org2.example.com/peers/peer17.org2.example.com/msp:/etc/hyperledger/fabric/msp
+        - ./channel/crypto-config/peerOrganizations/org2.example.com/peers/peer17.org2.example.com/tls:/etc/hyperledger/fabric/tls
+    depends_on:
+      - orderer.example.com
+      - couchdb17-2
+
+  peer18.org2.example.com:
+    container_name: peer18.org2.example.com
+    extends:
+      file:   base.yaml
+      service: peer
+    environment:
+      - CORE_PEER_ID=peer18.org2.example.com
+      - CORE_PEER_LOCALMSPID=Org2MSP
+      - CORE_PEER_ADDRESS=peer18.org2.example.com:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer19.org2.example.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer18.org2.example.com:7051
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb18-2:5984
+    ports:
+      - 8141:7051
+      - 8142:7053
+    volumes:
+        - /var/run/:/host/var/run/
+        - ./channel/crypto-config/peerOrganizations/org2.example.com/peers/peer18.org2.example.com/msp:/etc/hyperledger/fabric/msp
+        - ./channel/crypto-config/peerOrganizations/org2.example.com/peers/peer18.org2.example.com/tls:/etc/hyperledger/fabric/tls
+    depends_on:
+      - orderer.example.com
+      - couchdb18-2
+
+  peer19.org2.example.com:
+    container_name: peer19.org2.example.com
+    extends:
+      file:   base.yaml
+      service: peer
+    environment:
+      - CORE_PEER_ID=peer19.org2.example.com
+      - CORE_PEER_LOCALMSPID=Org2MSP
+      - CORE_PEER_ADDRESS=peer19.org2.example.com:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer20.org2.example.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer19.org2.example.com:7051
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb19-2:5984
+    ports:
+      - 8146:7051
+      - 8147:7053
+    volumes:
+        - /var/run/:/host/var/run/
+        - ./channel/crypto-config/peerOrganizations/org2.example.com/peers/peer19.org2.example.com/msp:/etc/hyperledger/fabric/msp
+        - ./channel/crypto-config/peerOrganizations/org2.example.com/peers/peer19.org2.example.com/tls:/etc/hyperledger/fabric/tls
+    depends_on:
+      - orderer.example.com
+      - couchdb19-2
+
+  peer20.org2.example.com:
+    container_name: peer20.org2.example.com
+    extends:
+      file:   base.yaml
+      service: peer
+    environment:
+      - CORE_PEER_ID=peer20.org2.example.com
+      - CORE_PEER_LOCALMSPID=Org2MSP
+      - CORE_PEER_ADDRESS=peer20.org2.example.com:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org2.example.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer20.org2.example.com:7051
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb20-2:5984
+    ports:
+      - 8151:7051
+      - 8152:7053
+    volumes:
+        - /var/run/:/host/var/run/
+        - ./channel/crypto-config/peerOrganizations/org2.example.com/peers/peer20.org2.example.com/msp:/etc/hyperledger/fabric/msp
+        - ./channel/crypto-config/peerOrganizations/org2.example.com/peers/peer20.org2.example.com/tls:/etc/hyperledger/fabric/tls
+    depends_on:
+      - orderer.example.com
+      - couchdb20-2
 
   couchdb0-1:
     container_name: couchdb0-1
@@ -1031,6 +1319,54 @@ services:
     ports:
       - "33984:5984"
 
+  couchdb15-1:
+    container_name: couchdb15-1
+    extends:
+      file: base.yaml
+      service: couchdb
+    ports:
+      - "35984:5984"
+
+  couchdb16-1:
+    container_name: couchdb16-1
+    extends:
+      file: base.yaml
+      service: couchdb
+    ports:
+      - "37984:5984"
+
+  couchdb17-1:
+    container_name: couchdb17-1
+    extends:
+      file: base.yaml
+      service: couchdb
+    ports:
+      - "39984:5984"
+
+  couchdb18-1:
+    container_name: couchdb18-1
+    extends:
+      file: base.yaml
+      service: couchdb
+    ports:
+      - "41984:5984"
+
+  couchdb19-1:
+    container_name: couchdb19-1
+    extends:
+      file: base.yaml
+      service: couchdb
+    ports:
+      - "43984:5984"
+
+  couchdb20-1:
+    container_name: couchdb20-1
+    extends:
+      file: base.yaml
+      service: couchdb
+    ports:
+      - "45984:5984"
+
   couchdb0-2:
     container_name: couchdb0-2
     extends:
@@ -1150,4 +1486,52 @@ services:
       service: couchdb
     ports:
       - "34984:5984"
+
+  couchdb15-2:
+    container_name: couchdb15-2
+    extends:
+      file: base.yaml
+      service: couchdb
+    ports:
+      - "36984:5984"
+
+  couchdb16-2:
+    container_name: couchdb16-2
+    extends:
+      file: base.yaml
+      service: couchdb
+    ports:
+      - "38984:5984"
+
+  couchdb17-2:
+    container_name: couchdb17-2
+    extends:
+      file: base.yaml
+      service: couchdb
+    ports:
+      - "40984:5984"
+
+  couchdb18-2:
+    container_name: couchdb18-2
+    extends:
+      file: base.yaml
+      service: couchdb
+    ports:
+      - "42984:5984"
+
+  couchdb19-2:
+    container_name: couchdb19-2
+    extends:
+      file: base.yaml
+      service: couchdb
+    ports:
+      - "44984:5984"
+
+  couchdb20-2:
+    container_name: couchdb20-2
+    extends:
+      file: base.yaml
+      service: couchdb
+    ports:
+      - "46984:5984"
 
