--- a/caliper/caliper-benchmarks-local/networks/fabric/base/network-config.yaml
+++ b/caliper/caliper-benchmarks-local/networks/fabric/base/network-config.yaml
@@ -10,7 +10,7 @@ caliper:
 
 info:
   Version: 2.1.0
-  Size: 2 Orgs with 5 Peer
+  Size: 2 Orgs with 20 Peer
   Orderer: Kafka
   Distribution: Single Host
   StateDB: CouchDB
@@ -254,13 +254,53 @@ peers:
     tlsCACerts:
       path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer14.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
 
-  # peer15.org1.example.com:
-  #   url: grpcs://localhost:7126
-  #   grpcOptions:
-  #     ssl-target-name-override: peer15.org1.example.com
-  #     grpc.keepalive_time_ms: 600000
-  #   tlsCACerts:
-  #     path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer15.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
+  peer15.org1.example.com:
+    url: grpcs://localhost:7126
+    grpcOptions:
+      ssl-target-name-override: peer15.org1.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer15.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
+
+  peer16.org1.example.com:
+    url: grpcs://localhost:7131
+    grpcOptions:
+      ssl-target-name-override: peer16.org1.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer16.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
+
+  peer17.org1.example.com:
+    url: grpcs://localhost:7136
+    grpcOptions:
+      ssl-target-name-override: peer17.org1.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer17.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
+
+  peer18.org1.example.com:
+    url: grpcs://localhost:7141
+    grpcOptions:
+      ssl-target-name-override: peer18.org1.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer18.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
+
+  peer19.org1.example.com:
+    url: grpcs://localhost:7146
+    grpcOptions:
+      ssl-target-name-override: peer19.org1.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer19.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
+
+  peer20.org1.example.com:
+    url: grpcs://localhost:7151
+    grpcOptions:
+      ssl-target-name-override: peer20.org1.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org1.example.com/peers/peer20.org1.example.com/msp/tlscacerts/tlsca.org1.example.com-cert.pem
 
   peer0.org2.example.com:
     url: grpcs://localhost:8051
@@ -382,10 +422,51 @@ peers:
     tlsCACerts:
       path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer14.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
 
-  # peer15.org2.example.com:
-  #   url: grpcs://localhost:9126
-  #   grpcOptions:
-  #     ssl-target-name-override: peer15.org2.example.com
-  #     grpc.keepalive_time_ms: 600000
-  #   tlsCACerts:
-  #     path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer15.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
+  peer15.org2.example.com:
+    url: grpcs://localhost:9126
+    grpcOptions:
+      ssl-target-name-override: peer15.org2.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer15.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
+
+  peer16.org2.example.com:
+    url: grpcs://localhost:9131
+    grpcOptions:
+      ssl-target-name-override: peer16.org2.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer16.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
+
+  peer17.org2.example.com:
+    url: grpcs://localhost:9136
+    grpcOptions:
+      ssl-target-name-override: peer17.org2.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer17.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
+
+  peer18.org2.example.com:
+    url: grpcs://localhost:9141
+    grpcOptions:
+      ssl-target-name-override: peer18.org2.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer18.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
+
+  peer19.org2.example.com:
+    url: grpcs://localhost:9146
+    grpcOptions:
+      ssl-target-name-override: peer19.org2.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer19.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
+
+  peer20.org2.example.com:
+    url: grpcs://localhost:9151
+    grpcOptions:
+      ssl-target-name-override: peer20.org2.example.com
+      grpc.keepalive_time_ms: 600000
+    tlsCACerts:
+      path: networks/fabric/base/crypto-config/peerOrganizations/org2.example.com/peers/peer20.org2.example.com/msp/tlscacerts/tlsca.org2.example.com-cert.pem
+
